force-app/main/default/objects/TourSaleStatus__c/TourSaleStatus__c.object-meta.xml
<CustomObject>
    <description>Tour sale status</description>
    <label>Tour Sale Status</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>TSS-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Tour Sale Status</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>