force-app/main/default/objects/TourSaleStatus__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount</description>
    <label>Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>