force-app/main/default/objects/TourSaleStatus__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price</description>
    <label>Price</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>