force-app/main/default/objects/TourSaleStatus__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Sale status</description>
    <required>true</required>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Sale</fullName>
                <default>true</default>
                <label>On Sale</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>