force-app/main/default/objects/TourSaleStatus__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <description>Total price of the tour with a discount</description>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>ROUND(Price__c - Price__c * Discount__c, 2)</formula>
</CustomField>