force-app/main/default/objects/TourSaleStatus__c/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Sale status related to the tour</inlineHelpText>
    <label>Tour</label>
    <referenceTo>Tour__c</referenceTo>
    <relationshipName>TSS_Tour</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>