force-app/main/default/objects/TourSaleStatus__c/fields/TravelAgency__c.field-meta.xml
<CustomField>
    <fullName>TravelAgency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Travel agency booked or purchased a tour</inlineHelpText>
    <label>Travel Agency</label>
    <referenceTo>TravelAgency__c</referenceTo>
    <relationshipName>TSS_TravelAgency</relationshipName>
    <type>Lookup</type>
</CustomField>